--- a/src/search.module.css
+++ b/src/search.module.css
@@ -12,6 +12,18 @@
   align-items: center;
   flex-grow: 1;
 }
+.runCodeButton {
+  position: absolute;
+  bottom: 0;
+}
+.code {
+  /* width: 20%; */
+  max-width: 250px;
+  background: white;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 .wrapper {
   display: flex;
   justify-content: center;
