--- a/src/Circle.module.css
+++ b/src/Circle.module.css
@@ -6,3 +6,13 @@
   height: 100%;
   margin-top: 60px;
 }
+
+.node {
+  fill: #ccc;
+  stroke: #fff;
+  stroke-width: 2px;
+}
+.link {
+  stroke: #777;
+  stroke-width: 2px;
+}
