--- a/src/GlitchEffect.sass
+++ b/src/GlitchEffect.sass
@@ -16,7 +16,7 @@
   h1.glitch::before, h1.glitch::after
     padding: 30px
     color: #ffbf49
-    content: "Welcome detective"
+    content: "Welcome"
     position: absolute
     width: 100%
     height: 100%
