--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background: linear-gradient(120.93deg, #03294a 4.58%, #091321 91.02%);
+  background: linear-gradient(120.93deg, #7d7d7d 4.58%, #6f6f6f 91.02%);
 }
 
 .App-logo {
