--- a/src/GraphVizTwo.css
+++ b/src/GraphVizTwo.css
@@ -1,12 +1,7 @@
-circle {
-  fill: cadetblue;
+.link {
+  stroke: #9092a7;
 }
-line {
-  stroke: #ccc;
-}
-text {
-  text-anchor: middle;
-  font-family: "Helvetica Neue", Helvetica, sans-serif;
-  fill: #666;
-  font-size: 16px;
+.node {
+  fill: #3d4177;
+  stroke-width: 2px;
 }
