--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -5,8 +5,10 @@
   flex-direction: column;
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(120.93deg, #03294a 4.58%, #091321 91.02%);
+  background: linear-gradient(120.93deg, #7d7d7d 4.58%, #6f6f6f 91.02%);
   color: "#FFF";
+}
+.headingWrapper {
 }
 .Heading {
   font-size: 50px;
@@ -14,7 +16,7 @@
   text-transform: uppercase;
   font-family: "Orbitron";
   /* background: -webkit-linear-gradient(#ff0b0b, #33333314); */
-  color: #ff0b0b;
+  color: #3d4177;
   opacity: 0.5;
   /* -webkit-background-clip: text; */
   opacity: 0.7;
@@ -22,7 +24,7 @@
 }
 .subHeading {
   font-size: 20px;
-  color: orange;
+  color: #3d4177;
   font-weight: 800;
   text-transform: uppercase;
   font-family: "Orbitron";
@@ -30,7 +32,7 @@
   margin-top: 0px;
 }
 .button {
-  background: linear-gradient(120.93deg, #03294a 4.58%, #091321 91.02%);
+  background: linear-gradient(120.93deg, #7d7d7d 4.58%, #6f6f6f 91.02%);
   padding: 50px;
   /* clip-path: polygon(0% 0%, 7% 100%, 87% 88%, 94% 4%); */
 }
@@ -50,7 +52,7 @@
 .Link {
   text-decoration: none;
   font-size: 24px;
-  color: orange;
+  color: #3d4177;
   font-weight: 900;
 }
 .Linkwrapper {
