--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(120.93deg, #03294a 4.58%, #091321 91.02%);
+  background: linear-gradient(120.93deg, #7d7d7d 4.58%, #6f6f6f 91.02%);
   height: 100vh;
   overscroll-behavior: none;
 }
