--- a/src/navbar.module.css
+++ b/src/navbar.module.css
@@ -2,43 +2,28 @@
   background: #5a8ad1;
   display: flex;
   justify-content: flex-start;
-  width: 100%;
-  padding: 0px;
+
+  margin: 20px;
+  padding: 10px;
   align-items: center;
-  -webkit-clip-path: polygon(6% 2%, 2% 30%, 2% 100%, 89% 88%, 93% 70%, 94% 4%);
-  clip-path: polygon(6% 2%, 2% 30%, 2% 100%, 89% 88%, 93% 70%, 94% 4%);
-  background: linear-gradient(120.93deg, #03294a 4.58%, #091321 91.02%);
+  border: 2px solid #10144a;
+
+  background: linear-gradient(120.93deg, #7d7d7d 4.58%, #6f6f6f 91.02%);
 }
 .heading {
   margin-left: 30px;
   font-family: "Orbitron";
 }
-.navbarWrapper {
-  margin-top: 20px;
-  background: orange;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 2px;
-  margin-top: 20px;
-  /* padding: 20px;
-  display: flex;
-  margin-top: 20px;
-  justify-content: flex-start;
-  align-items: center; */
-  -webkit-clip-path: polygon(6% 2%, 2% 30%, 2% 100%, 89% 88%, 93% 70%, 94% 4%);
-  clip-path: polygon(6% 2%, 2% 30%, 2% 100%, 89% 88%, 93% 70%, 94% 4%);
-  /* background: linear-gradient(120.93deg, #03294a 4.58%, #091321 91.02%); */
-}
+
 .link {
   text-decoration: none;
-  color: orange;
+  color: #3d4177;
   padding: 10px;
   font-family: "Orbitron";
 }
 .active {
   color: #081522;
-  background: orange;
+  background: #3d4177;
   clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 100%);
   padding: 43px;
   font-size: 20px;
@@ -52,7 +37,7 @@
   font-size: 30px;
   font-weight: 800;
   margin-right: 20px;
-  color: #ff0b0b;
+  color: #10144a;
 
   opacity: 0.7;
 }
