--- a/src/search.module.css
+++ b/src/search.module.css
@@ -1,13 +1,13 @@
 .array {
   display: flex;
-  border: 3px solid orange;
+  border: 3px solid #3d4177;
 }
 
 .arrayItem {
   display: flex;
   padding: 20px;
   background: transparent;
-  color: orange;
+  color: #3d4177;
   justify-content: center;
   align-items: center;
   flex-grow: 1;
@@ -29,7 +29,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(120.93deg, #03294a 4.58%, #091321 91.02%);
+  background: linear-gradient(120.93deg, #7d7d7d 4.58%, #6f6f6f 91.02%);
 }
 .fieldError {
   color: #ff0b0b;
@@ -49,7 +49,7 @@
   border-radius: 5px;
   padding: 10px 20px 10px 20px;
   background: #44689e;
-  color: orange;
+  color: #3d4177;
   margin-top: 15px;
 }
 .form {
@@ -60,18 +60,18 @@
 }
 .description {
   width: 50%;
-  color: orange;
+  color: #3d4177;
 }
 .heading {
-  color: orange;
+  color: #3d4177;
 }
 .input {
   width: 50px;
   padding: 3px;
   font-size: 18px;
-  border: 1px solid orange;
+  border: 1px solid #3d4177;
   background: transparent;
-  color: orange;
+  color: #3d4177;
 }
 .quiz {
   display: flex;
@@ -86,7 +86,7 @@
   align-items: flex-start;
 }
 .link {
-  color: orange;
+  color: #3d4177;
 }
 .background {
   display: flex;
